<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddExpense"
    android:background="@color/bgColor">

    <TextView
        android:id="@+id/addExpenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/addExpenseCardlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addExpenseText"
        app:layout_constraintBottom_toTopOf="@id/saveExpenseButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="29dp"
        android:elevation="4dp"
        android:backgroundTint="@color/cardbgColor">
        <LinearLayout
            android:id="@+id/cardLinearLayoutExpense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin = "16dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/addExpenseAmountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefixText="₹"
                android:fontFamily="@font/poppins"
                android:textColorHint="@color/editTextColor"
                app:expandedHintEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/ExpenseAmountInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/add_amount"
                    android:textColorHint="@color/editTextColor"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:background="@drawable/edit_text_bg"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ExpenseCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExpenseCategory"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/ExpenseCategoryInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:textColorHint="@color/editTextColor"
                android:fontFamily="@font/poppins"
                android:background="@drawable/edit_text_bg"
                android:textColor="@color/white"
                android:inputType="text"
                android:importantForAutofill="no" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/saveExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/buttomTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>