<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    tools:background="@color/black">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/balanceCard"
        android:layout_marginStart="14dp"
        android:orientation="horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userPhoto"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:shapeAppearance="@style/userPhotoCircle"
            android:src="@drawable/login"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                tools:text="Nitin Kumar"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:maxWidth="90dp"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/balanceCard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:cardCornerRadius="29dp"
        app:cardBackgroundColor="@color/cardbgColor"
        android:elevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/totalBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                style="@style/textStyle"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="27dp"/>
            <TextView
                android:id="@+id/balanceAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="₹5000.00"
                android:text="@string/_00_00"
                style="@style/textStyle"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@id/totalBalance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/expenseText"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:text="@string/expense"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balanceAmt" />

            <TextView
                android:id="@+id/expense"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expenseText"
                app:layout_constraintTop_toBottomOf="@+id/balanceAmt"
                android:layout_marginStart="10dp"
                tools:text="₹1500.00"
                android:text="@string/_00_00"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ExpenseCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/cardbgColor"
        app:cardCornerRadius="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balanceCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/transactions"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyTransaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                tools:listitem="@layout/daily_transaction_recylcer_layout"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>